Add mobile new two pages

--- a/comparisons.html
+++ b/comparisons.html
@@ -228,18 +228,18 @@
     </div>
 
     <div class="w-full mt-10 grid grid-cols-12 border-b pb-2">
-      <div class="col-span-2">
+      <div class="col-span-3 xl:col-span-2">
         <a href="#" class="text-[#6E6E6E] underline flex-js-e gap-2">
           <img src="img/icons/delete-remove.svg" alt="delete-remove">
           Очистить
         </a>
       </div>
-      <div class="col-span-2 px-[30px] relative">
+      <div class="col-span-3 xl:col-span-2 px-[30px] relative">
         <img src="img/products/product2.png" alt="product" class="w-[80%]">
         <h4 class="text-[18px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
         <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
       </div>
-      <div class="col-span-2 px-[30px] relative">
+      <div class="col-span-3 xl:col-span-2 px-[30px] relative">
         <img src="img/products/product2.png" alt="product" class="w-[80%]">
         <h4 class="text-[18px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
         <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
@@ -248,240 +248,14 @@
 
     <div class="w-full mt-10 mb-[300px]">
       <div class="w-full grid grid-cols-12 b-4">
-        <div class="col-span-2 border-r pb-3">
+        <div class="col-span-3 xl:col-span-2 border-r pb-3">
           <b class="text-[18px]">Цена</b>
         </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
+        <div class="text-[18px] col-span-3 xl:col-span-2 px-[30px] border-r pb-3">
           5 965 руб
         </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
+        <div class="text-[18px] col-span-3 xl:col-span-2 px-[30px] pb-3 border-r">
           5 965 руб
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12 b-4">
-        <div class="col-span-2 border-r">
-          <b class="text-[18px]">Тип удилища</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          Штекерное
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          Штекерное
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Предназначение</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          для спиннинга/ ловля в заброс/ для ловли на джиг/ для микроджига/ для ультралайта
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          для спиннинга/ ловля в заброс/ для ловли на джиг/ для микроджига/ для ультралайта
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Бренд</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          Jaxon
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          Jaxon
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Для вида рыбы</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          на окуня/ на щуку/ на судака/ для хищной рыбы
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          на окуня/ на щуку/ на судака/ для хищной рыбы
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Длина (см)</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          210
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          210
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Назначение</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          для рыбалки
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          для рыбалки
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Модель</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          Blue_Wind
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          Blue_Wind
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Вес (гр)</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          102
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          102
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Длина в сложении (см)</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          108
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          108
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Секции</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          2
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          2
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Кол-во пропускных колец (шт):</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          8
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          8
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Сезон</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          Демисезон/ Лето/ Осень/ Весна
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          Демисезон/ Лето/ Осень/ Весна
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Строй</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          Сверхбыстрый (Extra-fast)
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          Сверхбыстрый (Extra-fast)
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Страна производитель</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          Китай
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          Китай
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Материал</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          -
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          -
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Цвет</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          синий/ белый/ черный
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          синий/ белый/ черный
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Кол-во в упаковке, шт.</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          1
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          1
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Место ловли</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          на озере/ на реке/ с берега/ с лодки
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          на озере/ на реке/ с берега/ с лодки
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]">Уровень подготовки</b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          -
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          -
-        </div>
-      </div>
-      <div class="w-full grid grid-cols-12">
-        <div class="col-span-2 border-r pb-3">
-          <b class="text-[18px]"></b>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] border-r pb-3">
-          <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
-            В корзину
-            <img src="img/icons/basket-white.svg" alt="">
-          </button>
-        </div>
-        <div class="text-[18px] col-span-2 px-[30px] pb-3 border-r">
-          <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
-            В корзину
-            <img src="img/icons/basket-white.svg" alt="">
-          </button>
         </div>
       </div>
     </div>
