--- a/product-card.html
+++ b/product-card.html
@@ -217,9 +217,9 @@
   </ul>
 
 
-  <div class="w-full grid grid-cols-2 gap-10 mt-6">
-    <div class="w-full flex-jsb-c gap-4 mt-[-90px]">
-      <div class="w-[183px] min-w-[183px]">
+  <div class="w-full grid grid-cols-1 md:grid-cols-2 gap-6 2xl:gap-10 mt-6">
+    <div class="w-full flex-js-s xl:flex-jsb-c gap-4 xl:mt-[-90px] flex-col xl:flex-row">
+      <div class="w-[183px] min-w-[183px] hidden xl:block">
 
         <div class="flex-jc-c mb-2">
           <div id="product-items-prev" class="w-[42px] h-[42px] flex-jc-c border rounded-[8px] transition cursor-pointer hover:border-black">
@@ -274,15 +274,160 @@
         </div>
       </div>
 
-      <div class="w-full h-[869px] border flex-jc-c rounded-[12px] p-6">
+      <div>
+        <h1 class="text-[32px] font-medium mb-1 tracking-[-0.64px] leading-[32px]">Воблер для рыбалки глубоководный Jaxon Diver DR 12 см 28 гр #U</h1>
+
+        <div class="flex-js-c">
+          <span class="text-[13px] text-[#707070] mr-5">Артикул 154 245 245</span>
+          <div class="flex-js-c gap-4">
+            <span class="text-[13px] text-[#707070]">Рейтинг</span>
+
+            <div class="flex-js-c gap-1">
+              <img src="img/icons/star-yellow.svg" alt="">
+              4.2
+            </div>
+
+          </div>
+        </div>
+
+
+        <div class="flex-js-c gap-6 mt-4">
+          <div class="flex-js-c gap-2">
+            <img src="img/icons/rating-blue.svg" alt="">
+            К сравнению
+          </div>
+          <div class="flex-js-c gap-2">
+            <img src="img/icons/heard-blue.svg" alt="">
+            В избранное
+          </div>
+        </div>
+
+      </div>
+
+      <div class="w-full h-[460px] xl:h-[869px] border flex-jc-c rounded-[12px] p-6">
         <img src="img/products/product1.png" alt="" class="w-full" id="fullImagePath">
+      </div>
+
+      <div class="w-full flex-jsb-c gap-4 xl:hidden">
+
+        <div class="flex-jc-c">
+          <div id="product-items-prev-mobile" class="w-[42px] h-[42px] flex-jc-c border rounded-[8px] transition cursor-pointer hover:border-black transform rotate-[-90deg]">
+            <img src="img/icons/arrow-top.svg" alt="arrow-top">
+          </div>
+        </div>
+        <div class="swiper product-item-slider-mobile h-[90px]">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="w-full h-full border flex-jc-c overflow-hidden rounded-[12px] p-4 opacity-80 hover:opacity-100 cursor-pointer">
+                <img src="img/products/product1.png" alt="" class="w-full h-auto">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="w-full h-full border relative flex-jc-c overflow-hidden rounded-[12px] p-4 opacity-80 hover:opacity-100 cursor-pointer">
+                <img src="img/products/product2.png" alt="" class="w-full h-auto">
+                <img src="img/icons/play-blue.svg" alt="play-blue.svg" class="absolute" width="32">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="w-full h-full border flex-jc-c overflow-hidden rounded-[12px] p-4 opacity-80 hover:opacity-100 cursor-pointer">
+                <img src="img/products/product3.png" alt="" class="w-full h-auto">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="w-full h-full border flex-jc-c overflow-hidden rounded-[12px] p-4 opacity-80 hover:opacity-100 cursor-pointer">
+                <img src="img/products/product4.png" alt="" class="w-full h-auto">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="w-full h-full border flex-jc-c overflow-hidden rounded-[12px] p-4 opacity-80 hover:opacity-100 cursor-pointer">
+                <img src="img/products/product5.png" alt="" class="w-full h-auto">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="w-full h-full border flex-jc-c overflow-hidden rounded-[12px] p-4 opacity-80 hover:opacity-100 cursor-pointer">
+                <img src="img/products/product6.png" alt="" class="w-full h-auto">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="w-full h-full border flex-jc-c overflow-hidden rounded-[12px] p-4 opacity-80 hover:opacity-100 cursor-pointer">
+                <img src="img/products/product7.png" alt="" class="w-full h-auto">
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="flex-jc-c">
+          <div id="product-items-next-mobile" class="w-[42px] h-[42px] flex-jc-c border rounded-[8px] transition cursor-pointer hover:border-black transform rotate-[90deg]">
+            <img src="img/icons/arrow-top.svg" alt="arrow-top">
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <h3 class="text-[18px] font-semibold mt-8 mb-3">Рабочая длинна, см</h3>
+
+        <div class="w-full flex-js-c gap-2 flex-wrap">
+          <div class="h-[28px] px-3 border rounded-[8px] flex-jc-c text-[14px] hover:border-blue cursor-pointer">
+            21
+          </div>
+          <div class="h-[28px] px-3 border rounded-[8px] flex-jc-c text-[14px] hover:border-blue cursor-pointer">
+            25
+          </div>
+          <div class="h-[28px] px-3 border rounded-[8px] flex-jc-c text-[14px] hover:border-blue cursor-pointer">
+            34
+          </div>
+          <div class="h-[28px] px-3 border rounded-[8px] flex-jc-c text-[14px] hover:border-blue cursor-pointer">
+            36
+          </div>
+          <div class="h-[28px] px-3 border rounded-[8px] flex-jc-c text-[14px] hover:border-blue cursor-pointer">
+            43
+          </div>
+          <div class="h-[28px] px-3 border rounded-[8px] flex-jc-c text-[14px] hover:border-blue cursor-pointer">
+            44
+          </div>
+          <div class="h-[28px] px-3 border rounded-[8px] flex-jc-c text-[14px] hover:border-blue cursor-pointer">
+            59
+          </div>
+        </div>
+
+        <div class="flex-js-c gap-4 mt-8">
+          <img src="img/partners/partner-7.png" alt="partner logo" class="w-[58px]">
+          <div>
+            <h4 class="text-[14px] font-bold mb-[-2px]">Jaxon</h4>
+            <p class="text-[14px] text-[#707070]">Бренд</p>
+          </div>
+        </div>
+
+        <ul class="mt-3">
+          <li>
+            <span class="text-[#707070]">Производитель:</span>
+            Jaxon
+          </li>
+          <li>
+            <span class="text-[#707070]">Ценовой сегмент:</span>
+            средний
+          </li>
+          <li>
+            <span class="text-[#707070]">Вид ловли:</span>
+            для троллинга
+          </li>
+          <li>
+            <span class="text-[#707070]">Категория:</span>
+            воблеры
+          </li>
+          <li>
+            <span class="text-[#707070]">Вид крючка:</span>
+            тройной
+          </li>
+        </ul>
+        <a href="#" class="text-blue underline mt-1">Все характеристики</a>
       </div>
 
     </div>
 
 
-    <div class="w-full grid grid-cols-2 gap-6">
-      <div>
+    <div class="w-full grid grid-cols-1 xl:grid-cols-2 gap-6">
+      <div class="hidden xl:block">
         <h1 class="text-[32px] font-medium mb-1 tracking-[-0.64px] leading-[32px]">Воблер для рыбалки глубоководный Jaxon Diver DR 12 см 28 гр #U</h1>
 
         <div class="flex-js-c">
@@ -375,7 +520,7 @@
       <div>
         <div class="w-full bg-[#F4F4F4] rounded-[12px] overflow-hidden relative mb-2 flex-js-c p-6">
           <img src="img/percent-right.svg" alt="" class="w-auto h-full absolute right-0 top-0">
-          <div class="text-[18px]">
+          <div class="text-[18px] relative">
             <a href="#" class="text-blue underline mb-[-4px] block">Авторизуйтесь,</a>
             <p>что бы снизить цену</p>
           </div>
